--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,5 +1,9 @@
 ja:
   actionrecord:
     attributes:
+      user:
+        name: ユーザー名
+        password: パスワード
+        password_confirmation: パスワード(確認)
       post:
         content: 本文
