エラーメッセージの修正と削除の表示を投稿者に限定

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,8 +1,9 @@
 ja:
-  actionrecord:
+  activerecord:
     attributes:
       user:
         name: ユーザー名
+        email: メールアドレス
         password: パスワード
         password_confirmation: パスワード(確認)
       post:
